--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.56.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.13.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "pdf-parse": "^1.1.1",
